force-app/main/default/objects/Account/fields/CWS_Minimum_Commit_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Minimum_Commit_Amount__c</fullName>
    <label>Minimum Commit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>