force-app/main/default/objects/Account/fields/CWS_MNG_Partner_Log_In__c.field-meta.xml
<CustomField>
    <fullName>CWS_MNG_Partner_Log_In__c</fullName>
    <inlineHelpText>Captures Partner Login ID for Manage.</inlineHelpText>
    <label>MNG Partner Log In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>