force-app/main/default/objects/Account/fields/CWS_MRR__c.field-meta.xml
<CustomField>
    <fullName>CWS_MRR__c</fullName>
    <description>Contracted Monthly Recurring Revenue based on active Contracts for which this Account is the Sold To Account. This represents contracted MRR and does not include overages. Contracted MRR will be updated weekly over the weekend.</description>
    <inlineHelpText>Contracted Monthly Recurring Revenue based on active Contracts for which this Account is the Sold To Account. This represents contracted MRR and does not include overages. Contracted MRR will be updated weekly over the weekend.</inlineHelpText>
    <label>Contracted MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>