force-app/main/default/objects/Account/fields/CWS_MSA_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_MSA_Agreement_Status__c</fullName>
    <label>MSA Agreement Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>