force-app/main/default/objects/Account/fields/CWS_Multiple_Contract_Currencies__c.field-meta.xml
<CustomField>
    <fullName>CWS_Multiple_Contract_Currencies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark true if there is an associated Contract in a different currency from the Account currency</description>
    <inlineHelpText>Indicates that one or more Contracts associated to this Account has a different currency from the Account currency. To calculate Contracted ARR, all Contracts have been converted to match the Account currency.</inlineHelpText>
    <label>Multiple Contract Currencies</label>
    <type>Checkbox</type>
</CustomField>