force-app/main/default/objects/Account/fields/CWS_NDA_Agreement__c.field-meta.xml
<CustomField>
    <fullName>CWS_NDA_Agreement__c</fullName>
    <label>NDA Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>