force-app/main/default/objects/Account/fields/CWS_NDA_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_NDA_Agreement_Status__c</fullName>
    <label>NDA Agreement Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>