force-app/main/default/objects/Account/fields/CWS_Need_Recurring__c.field-meta.xml
<CustomField>
    <fullName>CWS_Need_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the Account needs a PO every month to process recurring invoices.</inlineHelpText>
    <label>Need Recurring PO</label>
    <type>Checkbox</type>
</CustomField>