force-app/main/default/objects/Account/fields/CWS_No_of_Workstations__c.field-meta.xml
<CustomField>
    <fullName>CWS_No_of_Workstations__c</fullName>
    <inlineHelpText>Captures the number of workstations, servers, or agents managed for the Account.</inlineHelpText>
    <label># of Workstations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>