force-app/main/default/objects/Account/fields/CWS_No_Territory_Mapping_Found__c.field-meta.xml
<CustomField>
    <fullName>CWS_No_Territory_Mapping_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Updates to checked (true) if the Account&apos;s address does not map to any existing territory categorization.</inlineHelpText>
    <label>No Territory Mapping Found</label>
    <type>Checkbox</type>
</CustomField>