force-app/main/default/objects/Account/fields/CWS_Paid_by_Parent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Paid_by_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this Account has its invoices paid for by its parent company.</inlineHelpText>
    <label>Paid by Parent</label>
    <type>Checkbox</type>
</CustomField>