force-app/main/default/objects/Account/fields/CWS_Parent_Account_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CWS_Parent_Account_Identifier__c</fullName>
    <formula>Parent.CWS_Account_Unique_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates a unique identifier that can be used to search or specify a specific Account record in the system.</inlineHelpText>
    <label>Parent Account Identifier</label>
    <type>Text</type>
</CustomField>