force-app/main/default/objects/Account/fields/CWS_Partner_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>CWS_Partner_Health_Score__c</fullName>
    <label>Partner Health Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>