force-app/main/default/objects/Account/fields/CWS_Partner_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Partner_Payment_Status__c</fullName>
    <label>Partner Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>Payment Workout</fullName>
            </value>
            <value>
                <fullName>Credit Hold</fullName>
            </value>
            <value>
                <fullName>Shut Off</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Inactive Aqcuired</fullName>
            </value>
            <value>
                <fullName>Inactive Gone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>