force-app/main/default/objects/Account/fields/CWS_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Partner_Type__c</fullName>
    <inlineHelpText>Captures the categorization of active or former Partner.</inlineHelpText>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIP Partner</fullName>
            </value>
            <value>
                <fullName>Mid Tier</fullName>
            </value>
            <value>
                <fullName>Low Touch</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Engaged in M&amp;A</fullName>
            </value>
            <value>
                <fullName>Former Partner</fullName>
            </value>
            <value>
                <fullName>AUTO-No Assurance</fullName>
            </value>
            <value>
                <fullName>MNG-No Assurance</fullName>
            </value>
            <value>
                <fullName>MNG/AUTO-No Assurance</fullName>
            </value>
            <value>
                <fullName>1-Tier Reseller</fullName>
                <isActive>false</isActive>
                <label>1-Tier Reseller</label>
            </value>
            <value>
                <fullName>2-Tier Reseller</fullName>
                <isActive>false</isActive>
                <label>2-Tier Reseller</label>
            </value>
            <value>
                <fullName>IIT Partner (needed?)</fullName>
                <isActive>false</isActive>
                <label>IIT Partner (needed?)</label>
            </value>
            <value>
                <fullName>Invent Partner</fullName>
                <isActive>false</isActive>
                <label>Invent Partner</label>
            </value>
            <value>
                <fullName>Invent Partner  (needed?)</fullName>
                <isActive>false</isActive>
                <label>Invent Partner  (needed?)</label>
            </value>
            <value>
                <fullName>Partner (obboarded?)</fullName>
                <isActive>false</isActive>
                <label>Partner (obboarded?)</label>
            </value>
            <value>
                <fullName>Vendor &amp; Partner</fullName>
                <isActive>false</isActive>
                <label>Vendor &amp; Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>