force-app/main/default/objects/Account/fields/CWS_PartnerDevelopmentManagerSEC__c.field-meta.xml
<CustomField>
    <fullName>CWS_PartnerDevelopmentManagerSEC__c</fullName>
    <description>This shows Account Team Member with Role- Partner Development Manager, SEC</description>
    <inlineHelpText>This shows Account Team Member with Role- Partner Development Manager, SEC</inlineHelpText>
    <label>Partner Development Manager, SEC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>