force-app/main/default/objects/Account/fields/CWS_PartnerSalesExecutiveSEC__c.field-meta.xml
<CustomField>
    <fullName>CWS_PartnerSalesExecutiveSEC__c</fullName>
    <description>This shows Account Team Member with Role- Partner Sales Executive, SEC</description>
    <inlineHelpText>This shows Account Team Member with Role- Partner Sales Executive, SEC</inlineHelpText>
    <label>Partner Sales Executive, SEC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>