force-app/main/default/objects/Account/fields/CWS_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>CWS_Payment_Terms__c</fullName>
    <inlineHelpText>Indicates the timeframe in which the Account is expected to pay for purchased items.</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due Upon Receipt</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 40</fullName>
            </value>
            <value>
                <fullName>Net 5</fullName>
            </value>
            <value>
                <fullName>Net 75</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Net 10</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>