force-app/main/default/objects/Account/fields/CWS_Peer_Group_info__c.field-meta.xml
<CustomField>
    <fullName>CWS_Peer_Group_info__c</fullName>
    <label>Peer Group info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Former Member</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Peer Group 1</fullName>
                <isActive>false</isActive>
                <label>Peer Group 1</label>
            </value>
            <value>
                <fullName>Peer Group 2</fullName>
                <isActive>false</isActive>
                <label>Peer Group 2</label>
            </value>
            <value>
                <fullName>Peer Group 3</fullName>
                <isActive>false</isActive>
                <label>Peer Group 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>