force-app/main/default/objects/Account/fields/CWS_Previous_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Previous_Company_Name__c</fullName>
    <description>Used in Quote Terms</description>
    <inlineHelpText>In case of Account Merger, merged Account name will be captured here.</inlineHelpText>
    <label>Previous Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>