force-app/main/default/objects/Account/fields/CWS_Products_Owned__c.field-meta.xml
<CustomField>
    <fullName>CWS_Products_Owned__c</fullName>
    <label>Products Owned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Patching</fullName>
                <isActive>false</isActive>
                <label>3rd Party Patching</label>
            </value>
            <value>
                <fullName>Acronis</fullName>
                <isActive>false</isActive>
                <label>Acronis</label>
            </value>
            <value>
                <fullName>Assist</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Auvik</fullName>
                <isActive>false</isActive>
                <label>Auvik</label>
            </value>
            <value>
                <fullName>Avalara</fullName>
                <isActive>false</isActive>
                <label>Avalara</label>
            </value>
            <value>
                <fullName>BDR Solution Partners</fullName>
            </value>
            <value>
                <fullName>Bitdefender</fullName>
                <isActive>false</isActive>
                <label>Bitdefender</label>
            </value>
            <value>
                <fullName>BrightGauge</fullName>
            </value>
            <value>
                <fullName>Business Mgmt Solution Partners</fullName>
            </value>
            <value>
                <fullName>Campaign Director</fullName>
                <isActive>false</isActive>
                <label>Campaign Director</label>
            </value>
            <value>
                <fullName>CCleaner</fullName>
                <isActive>false</isActive>
                <label>CCleaner</label>
            </value>
            <value>
                <fullName>Centrestack</fullName>
                <isActive>false</isActive>
                <label>Centrestack</label>
            </value>
            <value>
                <fullName>ChatAssist</fullName>
                <isActive>false</isActive>
                <label>ChatAssist</label>
            </value>
            <value>
                <fullName>Cloud Data Access (Manage)</fullName>
                <isActive>false</isActive>
                <label>Cloud Data Access (Manage)</label>
            </value>
            <value>
                <fullName>Comand</fullName>
                <isActive>false</isActive>
                <label>Comand</label>
            </value>
            <value>
                <fullName>Command</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
            <value>
                <fullName>Control Remote Support</fullName>
                <isActive>false</isActive>
                <label>Control Remote Support</label>
            </value>
            <value>
                <fullName>Control Stand alone product</fullName>
                <isActive>false</isActive>
                <label>Control Stand alone product</label>
            </value>
            <value>
                <fullName>CW RMM</fullName>
            </value>
            <value>
                <fullName>Cylance</fullName>
                <isActive>false</isActive>
                <label>Cylance</label>
            </value>
            <value>
                <fullName>Dedicated Tech</fullName>
            </value>
            <value>
                <fullName>ESET</fullName>
                <isActive>false</isActive>
                <label>ESET</label>
            </value>
            <value>
                <fullName>ESET Encryption (DESLock)</fullName>
                <isActive>false</isActive>
                <label>ESET Encryption (DESLock)</label>
            </value>
            <value>
                <fullName>Foresite</fullName>
                <isActive>false</isActive>
                <label>Foresite</label>
            </value>
            <value>
                <fullName>Fortify</fullName>
            </value>
            <value>
                <fullName>Greencloud</fullName>
                <isActive>false</isActive>
                <label>Greencloud</label>
            </value>
            <value>
                <fullName>Help Desk</fullName>
            </value>
            <value>
                <fullName>HitmanPro</fullName>
                <isActive>false</isActive>
                <label>HitmanPro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>