force-app/main/default/objects/Account/fields/CWS_Program_Membership__c.field-meta.xml
<CustomField>
    <fullName>CWS_Program_Membership__c</fullName>
    <label>Program Membership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>7FigureMSP</fullName>
            </value>
            <value>
                <fullName>All Covered</fullName>
            </value>
            <value>
                <fullName>American Coop</fullName>
            </value>
            <value>
                <fullName>ASCII</fullName>
            </value>
            <value>
                <fullName>BMS</fullName>
            </value>
            <value>
                <fullName>BPCA</fullName>
            </value>
            <value>
                <fullName>BTA</fullName>
            </value>
            <value>
                <fullName>CDA</fullName>
            </value>
            <value>
                <fullName>CMIT</fullName>
            </value>
            <value>
                <fullName>Computer Troubleshooters</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>D&amp;H</fullName>
            </value>
            <value>
                <fullName>Dental integrators</fullName>
            </value>
            <value>
                <fullName>Expertech</fullName>
            </value>
            <value>
                <fullName>GAP</fullName>
            </value>
            <value>
                <fullName>IBPI</fullName>
            </value>
            <value>
                <fullName>ICDA</fullName>
            </value>
            <value>
                <fullName>IDeACOM</fullName>
            </value>
            <value>
                <fullName>Ingram SMB Alliance</fullName>
            </value>
            <value>
                <fullName>Ingram TrustX Alliance</fullName>
            </value>
            <value>
                <fullName>ISAC - Automotive</fullName>
            </value>
            <value>
                <fullName>ISAC - Aviation</fullName>
            </value>
            <value>
                <fullName>ISAC - Electricity</fullName>
            </value>
            <value>
                <fullName>ISAC - Financial Services</fullName>
            </value>
            <value>
                <fullName>ISAC - Health</fullName>
            </value>
            <value>
                <fullName>ISAC - Maritime &amp; Port Security</fullName>
            </value>
            <value>
                <fullName>ISAC - Maritime Transportation Systems</fullName>
            </value>
            <value>
                <fullName>ISAC - Mining &amp; Metals</fullName>
            </value>
            <value>
                <fullName>ISAC - National Credit Union</fullName>
            </value>
            <value>
                <fullName>ISAC - National Defense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>