force-app/main/default/objects/Account/fields/CWS_Program_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>CWS_Program_Membership_Level__c</fullName>
    <label>Program Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Accelerate</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Strategic Branch</fullName>
            </value>
            <value>
                <fullName>Emerging</fullName>
                <isActive>false</isActive>
                <label>Emerging</label>
            </value>
            <value>
                <fullName>Growth</fullName>
                <isActive>false</isActive>
                <label>Growth</label>
            </value>
            <value>
                <fullName>Master</fullName>
                <isActive>false</isActive>
                <label>Master</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>