force-app/main/default/objects/Account/fields/CWS_Purchase_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>CWS_Purchase_Order_Required__c</fullName>
    <inlineHelpText>Indicates if the Account needs a PO to process an invoice.</inlineHelpText>
    <label>PO Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>