force-app/main/default/objects/Account/fields/CWS_Region__c.field-meta.xml
<CustomField>
    <fullName>CWS_Region__c</fullName>
    <description>Use to capture the Region for the Account on which CWS_Territory __c is dependent.</description>
    <inlineHelpText>Populates based on the Account address and is used to help assign the Territory.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Region</valueSetName>
    </valueSet>
</CustomField>