force-app/main/default/objects/Account/fields/CWS_RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>CWS_RegistrationDate__c</fullName>
    <description>Registration Date for CMS Migration</description>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>