force-app/main/default/objects/Account/fields/CWS_RelationshipLead__c.field-meta.xml
<CustomField>
    <fullName>CWS_RelationshipLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies who owns the Account relationship</inlineHelpText>
    <label>Relationship Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>