force-app/main/default/objects/Account/fields/CWS_Sales_Potential__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sales_Potential__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This signifies if the customer segmentation analysis identified this account as an account with growth potential.  This will help us identify the accounts the AM, PSE and PDM should focus on.</inlineHelpText>
    <label>Sales Potential</label>
    <type>Checkbox</type>
</CustomField>