force-app/main/default/objects/Account/fields/CWS_SalesExecutiveDigital__c.field-meta.xml
<CustomField>
    <fullName>CWS_SalesExecutiveDigital__c</fullName>
    <description>This shows Account Team Member with Role- Sales Executive, Digital</description>
    <inlineHelpText>This shows Account Team Member with Role- Sales Executive, Digital</inlineHelpText>
    <label>Sales Executive, Digital</label>
    <length>100</length>
    <type>Text</type>
</CustomField>