force-app/main/default/objects/Account/fields/CWS_SalesSpecialist__c.field-meta.xml
<CustomField>
    <fullName>CWS_SalesSpecialist__c</fullName>
    <description>This shows Account Team Member with Role- Sales Specialist</description>
    <inlineHelpText>This shows Account Team Member with Role- Sales Specialist</inlineHelpText>
    <label>Sales Specialist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>