force-app/main/default/objects/Account/fields/CWS_Segmentation_Tier__c.field-meta.xml
<CustomField>
    <fullName>CWS_Segmentation_Tier__c</fullName>
    <inlineHelpText>Segmentation based on total MRR</inlineHelpText>
    <label>Segmentation Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>