force-app/main/default/objects/Account/fields/CWS_Social_Media_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>CWS_Social_Media_LinkedIn__c</fullName>
    <label>Social Media (LinkedIn)</label>
    <type>Url</type>
</CustomField>