force-app/main/default/objects/Account/fields/CWS_SSO_GUID__c.field-meta.xml
<CustomField>
    <fullName>CWS_SSO_GUID__c</fullName>
    <description>Field for storing comma-delimited SSO Partner IDs.</description>
    <inlineHelpText>Supports Single Sign-On integration with Manage</inlineHelpText>
    <label>SSO Tenant (Partner) ID</label>
    <length>2600</length>
    <type>LongTextArea</type>
</CustomField>