force-app/main/default/objects/Account/fields/CWS_StrategicPartnerSalesExecutiveUMM__c.field-meta.xml
<CustomField>
    <fullName>CWS_StrategicPartnerSalesExecutiveUMM__c</fullName>
    <description>This shows Account Team Member with Role- Strategic Partner Sales Executive, UMM</description>
    <inlineHelpText>This shows Account Team Member with Role- Strategic Partner Sales Executive, UMM</inlineHelpText>
    <label>Strategic Partner Sales Executive, UMM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>