force-app/main/default/objects/Account/fields/CWS_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sub_Industry__c</fullName>
    <inlineHelpText>Dependent based upon the value selected in the Industry field.</inlineHelpText>
    <label>Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetName>CWS_Sub_Industry</valueSetName>
    </valueSet>
</CustomField>