force-app/main/default/objects/Account/fields/CWS_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>CWS_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up the Success Manager related to the Account.</description>
    <label>Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>