force-app/main/default/objects/Account/fields/CWS_Target_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>CWS_Target_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will show the Owner of Target Account</description>
    <label>Target Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>