force-app/main/default/objects/Account/fields/CWS_Target_Account_Rejected__c.field-meta.xml
<CustomField>
    <fullName>CWS_Target_Account_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will indicate if an account needs to be removed.</description>
    <inlineHelpText>This will indicate if an account needs to be removed.</inlineHelpText>
    <label>Target Account Rejected</label>
    <type>Checkbox</type>
</CustomField>